started the website
Half way through

--- a/Company-Home-Page/index.html
+++ b/Company-Home-Page/index.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>CHOMP'D</title>
+</head>
+<body>
+    <header class="flex-container">
+        <img src="/Company-Home-Page/imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
+        <nav>
+            <span><a href= #WhatWeDo>Who are we?</a></span>
+            <span><a href= #OurWork>Our Work</a></span>
+            <span><a href=#MeetTheTeam>Meet The Team</a></span>
+        </nav>
+    </header>
+    <main>
+        <section id="mission" class="flex-container">
+            <img src="/Company-Home-Page/imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
+            <h2>Bringing the food to you!</h2>
+        </section>
+        <section id="WhatWeDo" class="flex-container">
+            <div>
+                <h1 class="redBox">WHAT</h1>
+                <h1 class="whiteBox stretchLeft">WE DO</h1>
+            </div>
+            <p class="redBox">We are a group of food lovers who are here to discover unique food experiences and share them with the world. <br><br>            
+            We aim to capture the stories behind each eatery, and to show every bit of effort and passion that went into the
+            creation of the food and atmosphere. Not only that, we want to know the motive, struggles, and the excitement that made
+            the business what it is now.</p>
+        </section>
+        <section id="OurWork" class="flex-container">
+            <h1 class="whiteBox">OUR WORK</h1>
+            <div id="gallery">
+                <img src="./imgs/1.jpg" alt="">
+                <img src="./imgs/2.jpg" alt="">
+                <img src="./imgs/3.jpg" alt="">
+                <img src="./imgs/4.jpg" alt="">
+            </div>
+        </section>
+    </main>
+</body>
+</html>
