--- a/Company-Home-Page/index.html
+++ b/Company-Home-Page/index.html
@@ -8,12 +8,13 @@
     <title>CHOMP'D</title>
 </head>
 <body>
-    <header class="flex-container">
+    <header>
         <img src="/Company-Home-Page/imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
         <nav>
-            <span><a href= #WhatWeDo>Who are we?</a></span>
+            <span><a href= #WhatWeDo>What We Do</a></span>
             <span><a href= #OurWork>Our Work</a></span>
             <span><a href=#MeetTheTeam>Meet The Team</a></span>
+            <span><a href=#Contact>Contact US</a></span>
         </nav>
     </header>
     <main>
@@ -30,6 +31,8 @@
             We aim to capture the stories behind each eatery, and to show every bit of effort and passion that went into the
             creation of the food and atmosphere. Not only that, we want to know the motive, struggles, and the excitement that made
             the business what it is now.</p>
+            <div class="boxOutlineWhite"></div>
+          
         </section>
         <section id="OurWork" class="flex-container">
             <h1 class="whiteBox">OUR WORK</h1>
@@ -39,6 +42,53 @@
                 <img src="./imgs/3.jpg" alt="">
                 <img src="./imgs/4.jpg" alt="">
             </div>
+        </section>
+        <div class="red-teeth"></div>
+        <section id="MeetTheTeam" class="flex-container">
+            <h1 class="whiteBox">MEET THE TEAM</h1>
+            <div class="members">
+                <div class="member flex-container">
+                    <img src="./imgs/DANNY.webp" alt="">
+                    <div class="redBox">
+                        <h2 >Danny</h2>
+                        <p>Hey guys! I am Danny, co-founder of CHOMP'D. Through my love for food and adventures, I have decided to visit
+                        restaurants where the hard work, creativity and passion from the owners to the chefs are often overlooked. I knew then
+                        that I needed to create a platform where I was able to help capture and share the stories of the people involved in our
+                        favourite eateries.
+                    </div>
+                </div>
+                <div class="member flex-container">
+                    <img src="./imgs/lE.webp" alt="">
+                    <div class="redBox">
+                        <h2>Lejan</h2>
+                        <p>Lejan here! I absolutely love my food and all the different cuisines from all over the world. One of my favourite things
+                        to do is to discover new places to eat at and share them with everyone! But the one love that I will always come back to
+                        is home-made cooking.
+                    </div>
+                </div>
+                <div class="member flex-container">
+                    <img src="./imgs/GRAV.webp" alt="">
+                    <div class="redBox">
+                        <h2>Gaurav</h2>
+                        <p>Hey, I am Gaurav! I'm the videographer of CHOMP'D. I love everything to do with filmmaking ranging from the exciting
+                        pre-production right through to the creative post-production. I want to transfer my skills into the culinary arts world
+                        through visual storytelling of each dish that is prepared — showing the heart and the passion that goes into preparing
+                        and serving it.
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="white-teeth"></div>
+        <section id="Contact" class="flex-container">
+            <div id="info">
+                <h1 class="redBox">GET IN TOUCH</h1>
+                <p>Got a question? Know an awesome place that you want us to cover? Wondering how we work? Want to work with us? Just a
+                general enquiry?
+                <br><br>
+                Shoot us an email!</p>
+                <p id="email">Email: contact@chompdofficial.com</p>
+            </div>
+                <div class="boxOutlineRed"></div>
         </section>
     </main>
 </body>
