--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="/Company-Home-Page/imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
+        <img src="./imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
         <nav>
             <span><a href= #WhatWeDo>What We Do</a></span>
             <span><a href= #OurWork>Our Work</a></span>
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section id="mission" class="flex-container">
-            <img src="/Company-Home-Page/imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
+            <img src="./imgs/LOGO_COLOUR_NO_BACKGROUND.png" alt="">
             <h2>Bringing the food to you!</h2>
         </section>
         <section id="WhatWeDo" class="flex-container">
